[gd_scene load_steps=31 format=3 uid="uid://c8jr0502ype8o"]

[ext_resource type="Script" uid="uid://g8moj28l8vm2" path="res://scripts/main.gd" id="1_sugp2"]
[ext_resource type="Texture2D" uid="uid://bj0pkfexco4q8" path="res://assets/board.png" id="2_jyhfs"]
[ext_resource type="Script" uid="uid://b6nct758nk8u1" path="res://scripts/board.gd" id="3_tbgi4"]
[ext_resource type="FontFile" uid="uid://b2kthjgljphqc" path="res://assets/fonts/PressStart2P-Regular.ttf" id="4_jyhfs"]
[ext_resource type="AudioStream" uid="uid://u1e43drtjwt4" path="res://assets/audio/capture.mp3" id="5_eb6dy"]
[ext_resource type="AudioStream" uid="uid://d7loiu107xvv" path="res://assets/audio/castle.mp3" id="6_trceg"]
[ext_resource type="AudioStream" uid="uid://c14etrokvdwtr" path="res://assets/audio/click.mp3" id="7_a8y0u"]
[ext_resource type="AudioStream" uid="uid://bijdepkbyhtqc" path="res://assets/audio/game-end.mp3" id="8_jkv2x"]
[ext_resource type="AudioStream" uid="uid://dd7e1d3d8ovoy" path="res://assets/audio/move-check.mp3" id="9_jbj1t"]
[ext_resource type="AudioStream" uid="uid://dgj48vm8gvk7v" path="res://assets/audio/move-opponent.mp3" id="10_muem4"]
[ext_resource type="AudioStream" uid="uid://j4ga7hrwylx2" path="res://assets/audio/move-self.mp3" id="11_dp3eg"]
[ext_resource type="AudioStream" uid="uid://bkico2mdbrxo0" path="res://assets/audio/promote.mp3" id="12_0ld40"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jyhfs"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jyhfs"]
thickness = 3

[sub_resource type="StyleBoxLine" id="StyleBoxLine_tbgi4"]
thickness = 3
vertical = true

[sub_resource type="StyleBoxLine" id="StyleBoxLine_tefeu"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_o6xl0"]
vertical = true

[sub_resource type="StyleBoxLine" id="StyleBoxLine_tipki"]
vertical = true

[sub_resource type="StyleBoxLine" id="StyleBoxLine_85g3d"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_gqmmt"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("5_eb6dy")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_yc10j"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("6_trceg")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_jscy8"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("7_a8y0u")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_pm3ni"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("8_jkv2x")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_y6deb"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("9_jbj1t")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_og1vs"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("10_muem4")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_2wyq8"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("11_dp3eg")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vxglm"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("12_0ld40")

[sub_resource type="Animation" id="Animation_tbgi4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackSquare:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_jyhfs"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackSquare:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tefeu"]
_data = {
&"RESET": SubResource("Animation_tbgi4"),
&"fade": SubResource("Animation_jyhfs")
}

[node name="Main" type="Node2D"]
position = Vector2(17, 35)
script = ExtResource("1_sugp2")

[node name="ColorRect1" type="ColorRect" parent="."]
offset_left = -17.0
offset_top = -35.0
offset_right = 143.0
offset_bottom = 145.0
mouse_filter = 2
color = Color(0.154408, 0.398864, 0.239246, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 143.0
offset_top = -35.0
offset_right = 303.0
offset_bottom = 145.0
mouse_filter = 2
color = Color(0.109804, 0.301961, 0.176471, 1)

[node name="Board" type="Sprite2D" parent="."]
texture = ExtResource("2_jyhfs")
centered = false
script = ExtResource("3_tbgi4")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -17.0
offset_top = -35.0
offset_right = 23.0
offset_bottom = 5.0

[node name="ChaosChess" type="Label" parent="UI"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 103.0
offset_bottom = 23.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("4_jyhfs")
theme_override_font_sizes/font_size = 8
text = "CHAOS CHESS"

[node name="MoveHistory" type="Label" parent="UI"]
layout_mode = 0
offset_left = 181.0
offset_top = 65.0
offset_right = 277.0
offset_bottom = 73.0
scale = Vector2(1.2, 1.2)
theme_override_fonts/font = ExtResource("4_jyhfs")
theme_override_font_sizes/font_size = 8
text = "Move History"

[node name="ChaosEvent" type="Label" parent="UI"]
layout_mode = 0
offset_left = 171.0
offset_top = 14.0
offset_right = 307.0
offset_bottom = 22.0
theme_override_fonts/font = ExtResource("4_jyhfs")
theme_override_font_sizes/font_size = 8
text = "Chaos Event:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChaosLog" type="Label" parent="UI"]
layout_mode = 0
offset_left = 162.0
offset_top = 27.0
offset_right = 316.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("4_jyhfs")
theme_override_font_sizes/font_size = 8
text = "None"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MovePanel" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 126.0
offset_top = 62.0
offset_right = 271.0
offset_bottom = 155.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_jyhfs")

[node name="MoveList" type="RichTextLabel" parent="UI/MovePanel"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4_jyhfs")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
scroll_active = false
scroll_following = true

[node name="Frame" type="Control" parent="UI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="WindowFrame" type="Control" parent="UI/Frame"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Up" type="Panel" parent="UI/Frame/WindowFrame"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 2.0
theme_override_styles/panel = SubResource("StyleBoxLine_jyhfs")

[node name="Down" type="Panel" parent="UI/Frame/WindowFrame"]
layout_mode = 0
offset_top = 177.0
offset_right = 320.0
offset_bottom = 179.0
theme_override_styles/panel = SubResource("StyleBoxLine_jyhfs")

[node name="Left" type="Panel" parent="UI/Frame/WindowFrame"]
layout_mode = 0
offset_right = 3.0
offset_bottom = 180.0
theme_override_styles/panel = SubResource("StyleBoxLine_tbgi4")

[node name="Right" type="Panel" parent="UI/Frame/WindowFrame"]
layout_mode = 0
offset_left = 317.0
offset_right = 320.0
offset_bottom = 180.0
theme_override_styles/panel = SubResource("StyleBoxLine_tbgi4")

[node name="BoardFrame" type="Control" parent="UI/Frame"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Up" type="Panel" parent="UI/Frame/BoardFrame"]
layout_mode = 0
offset_left = 18.0
offset_top = 34.0
offset_right = 144.0
offset_bottom = 35.0
theme_override_styles/panel = SubResource("StyleBoxLine_tefeu")

[node name="Down" type="Panel" parent="UI/Frame/BoardFrame"]
layout_mode = 0
offset_left = 18.0
offset_top = 163.0
offset_right = 144.0
offset_bottom = 164.0
theme_override_styles/panel = SubResource("StyleBoxLine_tefeu")

[node name="Left" type="Panel" parent="UI/Frame/BoardFrame"]
layout_mode = 0
offset_left = 16.0
offset_top = 35.0
offset_right = 17.0
offset_bottom = 163.0
theme_override_styles/panel = SubResource("StyleBoxLine_o6xl0")

[node name="Right" type="Panel" parent="UI/Frame/BoardFrame"]
layout_mode = 0
offset_left = 145.0
offset_top = 35.0
offset_right = 146.0
offset_bottom = 163.0
theme_override_styles/panel = SubResource("StyleBoxLine_o6xl0")

[node name="Border" type="Panel" parent="UI/Frame"]
layout_mode = 0
offset_left = 159.0
offset_top = 1.0
offset_right = 160.0
offset_bottom = 177.0
theme_override_styles/panel = SubResource("StyleBoxLine_tipki")

[node name="Border2" type="Panel" parent="UI/Frame"]
layout_mode = 0
offset_left = 160.0
offset_top = 55.0
offset_right = 319.0
offset_bottom = 56.0
theme_override_styles/panel = SubResource("StyleBoxLine_85g3d")

[node name="CpuCheck" type="CheckButton" parent="UI"]
layout_mode = 0
offset_left = 6.0
offset_top = 166.0
offset_right = 118.0
offset_bottom = 190.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("4_jyhfs")
text = "CPU "

[node name="RestartButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 100.0
offset_top = 166.0
offset_right = 220.0
offset_bottom = 190.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("4_jyhfs")
text = "Restart"

[node name="Audio" type="Node" parent="."]

[node name="Capture" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource("AudioStreamRandomizer_gqmmt")

[node name="Castle" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource("AudioStreamRandomizer_yc10j")

[node name="Click" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource("AudioStreamRandomizer_jscy8")
volume_db = -20.0

[node name="GameEnd" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource("AudioStreamRandomizer_pm3ni")

[node name="MoveCheck" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource("AudioStreamRandomizer_y6deb")

[node name="MoveBlack" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource("AudioStreamRandomizer_og1vs")

[node name="MoveWhite" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource("AudioStreamRandomizer_2wyq8")

[node name="Promote" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource("AudioStreamRandomizer_vxglm")

[node name="BlackSquare" type="ColorRect" parent="."]
z_index = 5
offset_left = -17.0
offset_top = -34.0
offset_right = 303.0
offset_bottom = 145.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tefeu")
}

[connection signal="toggled" from="UI/CpuCheck" to="." method="_on_cpu_check_toggled"]
[connection signal="pressed" from="UI/RestartButton" to="." method="_on_restart_button_pressed"]
